--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_TITLE=COVID-19 Tables (Dev)
-VUE_APP_API_ENDPOINT=/api
+VUE_APP_API_ENDPOINT=https://coronamed-api.herokuapp.com/api
 VUE_APP_PERSISTED_STATE_KEY=cvd19
