--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"vue-axios": "^2.1.4",
 		"vue-material": "^1.0.0-beta-12",
 		"vue-router": "^3.0.1",
+		"vue-shortkey": "^3.1.7",
 		"vue-sweetalert2": "^1.6.4",
 		"vue-template-compiler": "^2.5.21",
 		"vuex": "^3.0.1",
