--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "covid-19-tables",
+	"name": "coronamed-web",
 	"version": "1.0.2",
 	"author": "Andrew L.",
 	"description": "A Vue boilerplate project",
